Fix style guide nav on mobile.

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -100,6 +100,9 @@
   float: left;
   margin-right: 1rem;
 }
+.sg-nav__list > li:last-of-type {
+  margin-right: 0;
+}
 
 .sg-nav__item {
   display: block;
